--- a/_config.yml
+++ b/_config.yml
@@ -213,9 +213,9 @@ collections:
     output: true
     permalink: /:collection/:path/
   portfolio:
-    output: true
+    output: false
     permalink: /:collection/:path/
-  talks:
+  conference/seminar:
     output: true
     permalink: /:collection/:path/
 
