--- a/_config.yml
+++ b/_config.yml
@@ -105,14 +105,14 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/sayedmorteza-malaekeh/"
+  linkedin         : "sayedmorteza-malaekeh/"
   orcid            : "https://orcid.org/0000-0003-2794-9374"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://x.com/SM_Malaekeh"
+  twitter          : "SM_Malaekeh"
   vine             :
   weibo            :
   xing             :
