--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,12 +8,12 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "Talks"
+  - title: "Conference/Seminar"
     url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
     
   - title: "CV"
-    url: /cv/
+    url: "https://SMalaekeh.github.io/files/Morteza_CV.pdf"
     
