--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "Conference/Seminar"
+  - title: "Talks"
     url: /talks/    
 
   - title: "Teaching"
